crates/tree-sitter-tolk/test/corpus/simple.test.txt
========================================================================
Simple parsing 1
========================================================================

fun lshift(): bool {
    return (1 << 0) < 1;
}
fun rshift() {
    return (1 << 0) == 1;
}
fun rshift(): (int, int) {
    return (1 << 0) <=> 1;
}
------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (type_identifier)
    (block_statement
      (return_statement
        (binary_operator
          (parenthesized_expression
            (binary_operator
              (number_literal)
              (number_literal)))
          (number_literal)))))
  (function_declaration
    (identifier)
    (parameter_list)
    (block_statement
      (return_statement
        (binary_operator
          (parenthesized_expression
            (binary_operator
              (number_literal)
              (number_literal)))
          (number_literal)))))
  (function_declaration
    (identifier)
    (parameter_list)
    (tensor_type
      (type_identifier)
      (type_identifier))
    (block_statement
      (return_statement
        (binary_operator
          (parenthesized_expression
            (binary_operator
              (number_literal)
              (number_literal)))
          (number_literal))))))

========================================================================
Function calls
========================================================================
fun main() {
    f();
    f()();
    f()()();
}
------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block_statement
      (expression_statement
        (function_call
          (identifier)
          (argument_list)))
      (expression_statement
        (function_call
          (function_call
            (identifier)
            (argument_list))
          (argument_list)))
      (expression_statement
        (function_call
          (function_call
            (function_call
              (identifier)
              (argument_list))
            (argument_list))
          (argument_list))))))

========================================================================
Fields access
========================================================================
fun main() {
    obj.f1;
    obj.f1.f2;
    obj.f2.f2.f3;
    tensorVar.0;
    tupleVar.0.1;
}
------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block_statement
      (expression_statement
        (dot_access
          (identifier)
          (identifier)))
      (expression_statement
        (dot_access
          (dot_access
            (identifier)
            (identifier))
          (identifier)))
      (expression_statement
        (dot_access
          (dot_access
            (dot_access
              (identifier)
              (identifier))
            (identifier))
          (identifier)))
      (expression_statement
        (dot_access
          (identifier)
          (numeric_index)))
      (expression_statement
        (dot_access
          (dot_access
            (identifier)
            (numeric_index))
          (numeric_index))))))

========================================================================
Method calls
========================================================================
fun main() {
    obj.method();
    obj.method().method();
    obj.field.method();
    obj.method().field;
    tensorVar.0();
}
------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block_statement
      (expression_statement
        (function_call
          (dot_access
            (identifier)
            (identifier))
          (argument_list)))
      (expression_statement
        (function_call
          (dot_access
            (function_call
              (dot_access
                (identifier)
                (identifier))
              (argument_list))
            (identifier))
          (argument_list)))
      (expression_statement
        (function_call
          (dot_access
            (dot_access
              (identifier)
              (identifier))
            (identifier))
          (argument_list)))
      (expression_statement
        (dot_access
          (function_call
            (dot_access
              (identifier)
              (identifier))
            (argument_list))
          (identifier)))
      (expression_statement
        (function_call
          (dot_access
            (identifier)
            (numeric_index))
          (argument_list))))))

========================================================================
Lateinit variable
========================================================================

fun main() {
    var x: int;
    x = 10;
}
------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block_statement
      (expression_statement
        (var_declaration_lhs
          (var_declaration
            (identifier)
            (type_identifier))))
      (expression_statement
        (assignment
          (identifier)
          (number_literal))))))

========================================================================
Contract declaration
========================================================================

contract Wallet {
    state: int,
    init: 1 + 2,
}
------------------------------------------------------------------------

(source_file
  (contract_declaration
    (identifier)
    (contract_body
      (contract_field
        (identifier)
        (type_identifier))
      (contract_field
        (identifier)
        (binary_operator
          (number_literal)
          (number_literal))))))

========================================================================
Typed tuple with explicit type
========================================================================

fun main() {
    val data = int[1, 2];
}
------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block_statement
      (expression_statement
        (assignment
          (var_declaration_lhs
            (var_declaration
              (identifier)))
          (typed_tuple
            (type_identifier)
            (number_literal)
            (number_literal)))))))

========================================================================
Nested empty tuple
========================================================================

fun main() {
    val data = [[]];
}
------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameter_list)
    (block_statement
      (expression_statement
        (assignment
          (var_declaration_lhs
            (var_declaration
              (identifier)))
          (typed_tuple
            (typed_tuple)))))))
